# scylladb-migrate

./: .gitignore  Cargo.toml  README.md
src/: db.rs  main.rs
