[package]
name = "scylladb-migrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.90"
chrono = "0.4.38"
scylla = { version = "0.14.0", features = ["chrono-04"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }